fix mobile white gap with 100vh height

--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -134,10 +134,11 @@
   header#home {
     margin: 0px;
     min-height: 0px;
+    height: 100vh;
   }
 
   .hover-container {
-    height: 100% !important;
+    height: 100vh !important;
   }
 
   .bottom-left {
